# pybopt

./: LICENSE  README.md  pyproject.toml
showcases/: test_1d.py  test_2d.py
src/pybopt/: __init__.py  bayesian_opt.py  gaussian_process.py
