[project]
name = "pybopt"
version = "2025.1"
dependencies = [
    "numpy >= 2.0.0",
    "scipy >= 1.16.0"
]
authors = [{ name = "Zsolt Fazekas", email = "zsolt.fazekas.9@gmail.com" }, ]
description = "A mock project for Bayesian optimization."
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics"
]
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools >= 78.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]